--- a/badger/flux-system/components.yaml
+++ b/badger/flux-system/components.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   interval: 1m
   ref:
-    branch: main
+    # branch: main
+    branch: test-dependson
     # tag: v0.1.0
   url: https://github.com/merusso/cluster-components-flux-kustomize.git
 ---
@@ -19,7 +20,8 @@ metadata:
 spec:
   interval: 1m
   ref:
-    branch: main
+    # branch: main
+    branch: test-dependson
   url: https://github.com/merusso/clusters-flux.git
   include:
     - repository:
