--- a/dingo/flux-system/components.yaml
+++ b/dingo/flux-system/components.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   interval: 1m
   ref:
-    branch: main
+    # branch: main
+    branch: test-dependson
     # tag: v0.1.0
   url: https://github.com/merusso/cluster-components-flux-helm.git
 ---
@@ -29,9 +30,17 @@ spec:
     departmentCode: 2
     alpha:
       values:
+        podAnnotations:
+          test: "1"
         replicaCount: 2
     bravo:
       values:
+        podAnnotations:
+          test: "1"
         replicaCount: 2
     charlie:
       enabled: true
+      values:
+        podAnnotations:
+          test: "1"
+        replicaCount: 2
